--- a/functions/package.json
+++ b/functions/package.json
@@ -2,13 +2,18 @@
   "name": "express-ts-template",
   "version": "1.0.0",
   "description": "Complete template for an Express app using Typescript",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "npm run shell",
+    "develop": "nodemon src/index.ts",
     "build": "tsc",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
     "clean": "rm -rf ./lib",
+    "deploy": "firebase deploy --only functions",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "logs": "firebase functions:log"
   },
   "repository": {
     "type": "git",
@@ -20,21 +25,30 @@
     "url": "https://github.com/julian-hecker/express-ts-template/issues"
   },
   "homepage": "https://github.com/julian-hecker/express-ts-template#readme",
+  "engines": {
+    "node": "14"
+  },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.16.0",
+    "fireorm": "^0.23.2",
+    "helmet": "^4.6.0",
     "http-errors": "^1.8.0"
   },
   "devDependencies": {
     "@jest-mock/express": "^1.4.5",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.2",
     "@types/supertest": "^2.0.11",
+    "firebase-functions-test": "^0.2.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "supertest": "^6.1.6",
